image naming fix

--- a/CodingEarth.slides.html
+++ b/CodingEarth.slides.html
@@ -13237,7 +13237,7 @@ a.anchor-link {
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h2 id="Find-a-good-data-representation">Find a good data representation<a class="anchor-link" href="#Find-a-good-data-representation">&#182;</a></h2><p><img src="img/representation2.png" alt="title"></p>
+<h2 id="Find-a-good-data-representation">Find a good data representation<a class="anchor-link" href="#Find-a-good-data-representation">&#182;</a></h2><p><img src="img/representation.png" alt="title"></p>
 <p>Expelation of the basic representations: <a href="https://www.youtube.com/watch?v=WN18JksF9Cg">https://www.youtube.com/watch?v=WN18JksF9Cg</a></p>
 
 </div>
